--- a/BookStore/Web.config
+++ b/BookStore/Web.config
@@ -55,8 +55,7 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <!--<add name="BookStoreEntities" connectionString="metadata=res://*/Common.Model_BookStore.csdl|res://*/Common.Model_BookStore.ssdl|res://*/Common.Model_BookStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-V86QANI\MSSQLSERVER2016;initial catalog=BOOKSTORE;user id=sa;password=12345678;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="BookStoreEntities" connectionString="metadata=res://*/Common.Model_BookStore.csdl|res://*/Common.Model_BookStore.ssdl|res://*/Common.Model_BookStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql.bsite.net\MSSQL2016;initial catalog=aspnetmvc_;user id=aspnetmvc_;password=12345678;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BookStoreEntities" connectionString="metadata=res://*/Common.Model_BookStore.csdl|res://*/Common.Model_BookStore.ssdl|res://*/Common.Model_BookStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-V86QANI\MSSQLSERVER2016;initial catalog=BOOKSTORE;user id=sa;password=12345678;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
